[modify]为订单页面添加顶部页标签

--- a/taixinkanghu/src/main/res/layout/activity_nurs_order.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurs_order.xml
@@ -25,41 +25,47 @@
                 <LinearLayout
                     android:id="@+id/btn_screening"
                     android:layout_width="match_parent"
-                    android:layout_height="54dp"
+                    android:layout_height="40dp"
                     android:layout_marginTop="10dp"
-                    android:background="@drawable/bg_bule_frame"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.0"
-                        android:text="筛选条件:"
-                        android:layout_marginLeft="15dp"
-                        android:textColor="@color/text_color_black"
-                        android:textSize="16.0sp" />
+                    <RadioGroup
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@id/phone"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="right"
-                        android:hint="全部"
-                        android:textColor="@android:color/black"
-                        android:textColorHint="@color/text_color_gray"
-                        android:textSize="20.0sp" />
+                        <RadioButton
+                            style="@style/home_radio_button_style"
+                            android:layout_width="20dp"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/bg_top_tab"
+                            android:text="全部"/>
 
-                    <TextView
-                        android:id="@id/phone_arrow"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:hint="V"
-                        android:layout_marginRight="15dp"
-                        android:textColorHint="@color/text_color_gray"
-                        android:textSize="18.0sp"
-                        android:visibility="visible" />
+                        <RadioButton
+                            style="@style/home_radio_button_style"
+                            android:layout_width="20dp"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/bg_top_tab"
+                            android:text="未付款"/>
+
+                        <RadioButton
+                            style="@style/home_radio_button_style"
+                            android:layout_width="20dp"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/bg_top_tab"
+                            android:text="服务中"
+                            android:visibility="gone"/>
+
+                        <RadioButton
+                            style="@style/home_radio_button_style"
+                            android:layout_width="20dp"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/bg_top_tab"
+                            android:text="已完成"/>
+
+                    </RadioGroup>
 
                 </LinearLayout>
 
@@ -67,6 +73,7 @@
                     android:id="@+id/lv_order_info"
                     android:layout_width="match_parent"
                     android:layout_height="391dp"
+                    android:layout_marginTop="5dp"
                     android:gravity="center_vertical">
 
                 </ListView>
