--- a/taixinkanghu/src/main/res/layout/fragment_select_hospital.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_hospital.xml
@@ -81,7 +81,7 @@
                 android:visibility="visible" />
 
             <Button
-                android:id="@+id/beijingtiantan_item"
+                android:id="@+id/item_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -111,7 +111,7 @@
                 android:paddingRight="10dp">
 
                 <Button
-                    android:id="@+id/beijingchaoyang_item"
+                    android:id="@+id/item_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -127,7 +127,7 @@
                     android:visibility="visible" />
 
                 <Button
-                    android:id="@+id/yikeyuanzhongliu_item"
+                    android:id="@+id/item_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
