[modify]将字体单位由dp同意改为sp

--- a/taixinkanghu/src/main/res/layout/activity_appointment.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -418,7 +418,7 @@
             <!--android:layout_marginRight="10dp"-->
             <!--android:gravity="center_vertical"-->
             <!--android:text="自理程度："-->
-            <!--android:textSize="15dp" />-->
+            <!--android:textSize="15sp" />-->
 
             <!--<TextView-->
             <!--android:layout_width="wrap_content"-->
@@ -470,7 +470,7 @@
             <!--android:gravity="center_vertical"-->
             <!--android:text="提示：被护理人在家，请详细到门牌号码；在医院，请详细到科室床号；以方便陪护员上门"-->
             <!--android:textColor="#55000000"-->
-            <!--android:textSize="12dp" />-->
+            <!--android:textSize="12sp" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -489,7 +489,7 @@
                     android:imeOptions="actionGo"
                     android:singleLine="true"
                     android:textColorHint="@color/text_color_gray"
-                    android:textSize="14dp" />
+                    android:textSize="14sp" />
 
                 <!--<TextView-->
                 <!--android:layout_width="wrap_content"-->
@@ -498,7 +498,7 @@
                 <!--android:layout_marginLeft="5dp"-->
                 <!--android:layout_marginRight="10dp"-->
                 <!--android:gravity="center_vertical"-->
-                <!--android:textSize="15dp" />-->
+                <!--android:textSize="15sp" />-->
 
 
                 <!--<EditText-->
