--- a/taixinkanghu/src/main/res/layout/main_func_item.xml
+++ b/taixinkanghu/src/main/res/layout/main_func_item.xml
@@ -18,7 +18,7 @@
 		android:layout_height="wrap_content"
 		android:layout_below="@+id/main_func_imgview"
 		android:layout_marginTop="4dp"
-		android:textSize="18dp"
+		android:textSize="18sp"
 		android:layout_centerHorizontal="true"
 		android:text="Medium Text"
 		android:textColor="@android:color/holo_green_dark"
