--- a/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
 	android:id="@+id/appointment_nursing_page"
 	xmlns:android="http://schemas.android.com/apk/res/android"
@@ -28,7 +28,7 @@
 				android:gravity="center_vertical"
 				android:text="@string/apponintment_page_hint_text"
 				android:textColor="@color/main_color"
-				android:textSize="12dp"/>
+				android:textSize="12sp"/>
 
 			<LinearLayout
 				android:id="@+id/name_region"
