--- a/taixinkanghu/src/main/res/layout/activity_my_wealth.xml
+++ b/taixinkanghu/src/main/res/layout/activity_my_wealth.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -65,7 +65,7 @@
                     android:layout_marginTop="5dp"
                     android:hint="提示：每1积分等于1分钱，可以再。。。"
                     android:textColorHint="@color/text_color_gray"
-                    android:textSize="12dp"
+                    android:textSize="12sp"
                     android:visibility="visible" />
 
 
@@ -78,7 +78,7 @@
                 android:gravity="center_vertical"
                 android:textStyle="bold"
                 android:hint=">"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
 
 
         </LinearLayout>
