--- a/taixinkanghu/src/main/res/layout/fragment_contact_information.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_contact_information.xml
@@ -71,7 +71,7 @@
             android:layout_marginRight="30dp"
             android:layout_gravity="center_vertical"
             android:hint="请输入联系方式"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:background="#00000000"
             android:gravity="left"
             android:singleLine="true"
