--- a/taixinkanghu/src/main/res/layout/activity_shopping.xml
+++ b/taixinkanghu/src/main/res/layout/activity_shopping.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			 android:id="@+id/shopping_page"
+<FrameLayout android:id="@+id/shopping_page"
+			 xmlns:android="http://schemas.android.com/apk/res/android"
 			 android:layout_width="match_parent"
 			 android:layout_height="match_parent">
 
@@ -10,132 +10,133 @@
 		android:layout_height="match_parent"
 		android:orientation="vertical">
 
-		<include layout="@layout/include_header"
-			android:id="@+id/title"/>
+		<include
+			android:id="@+id/title"
+			layout="@layout/include_header"/>
 
 		<LinearLayout
+			android:id="@+id/search_region"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:orientation="horizontal"
-			android:id="@+id/search_region">
+			android:orientation="horizontal">
 
 			<EditText
+				android:id="@+id/search_bar"
 				android:layout_width="match_parent"
 				android:layout_height="28dp"
 				android:layout_marginBottom="5dp"
 				android:layout_marginLeft="15dp"
 				android:layout_marginTop="10dp"
-				android:layout_weight="1"
-				android:id="@+id/search_bar"/>
+				android:layout_weight="1"/>
 
 			<TextView
+				android:id="@+id/search_btn"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_gravity="center_vertical"
 				android:layout_marginLeft="15dp"
 				android:layout_marginRight="15dp"
-				android:text="@string/search"
-				android:id="@+id/search_btn"/>
+				android:text="@string/search"/>
 
 		</LinearLayout>
 
 		<LinearLayout
+			android:id="@+id/button_group_region"
 			android:layout_width="match_parent"
 			android:layout_height="30dp"
 			android:background="@drawable/bg_bule_frame"
-			android:orientation="horizontal"
-			android:id="@+id/button_group_region">
+			android:orientation="horizontal">
 
 			<LinearLayout
+				android:id="@+id/sales_volume_sort_btn"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:layout_weight="1"
-				android:orientation="horizontal"
-				android:id="@+id/sales_volume_sort_btn">
+				android:orientation="horizontal">
 
 				<TextView
+					android:id="@+id/sales_volume_sort_btn_text"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_gravity="center_vertical"
 					android:layout_marginLeft="15dp"
 					android:layout_weight="1"
 					android:gravity="center_horizontal"
-					android:text="@string/sales_volume"
-					android:id="@+id/sales_volume_sort_btn_text"/>
+					android:text="@string/sales_volume"/>
 
 				<ImageView
+					android:id="@+id/sales_volume_sort_order_img"
 					android:layout_width="10dp"
 					android:layout_height="10dp"
 					android:layout_gravity="center_vertical"
 					android:layout_marginRight="15dp"
-					android:background="@mipmap/img_shopping_down"
-					android:id="@+id/sales_volume_sort_order_img"/>
+					android:background="@mipmap/img_shopping_down"/>
 
 			</LinearLayout>
 
 			<TextView
+				android:id="@+id/dividing_line"
 				android:layout_width="1dp"
 				android:layout_height="match_parent"
-				android:background="@color/main_color"
-				android:id="@+id/dividing_line"/>
+				android:background="@color/main_color"/>
 
 			<LinearLayout
+				android:id="@+id/price_sort_btn"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:layout_weight="1"
-				android:orientation="horizontal"
-				android:id="@+id/price_sort_btn">
+				android:orientation="horizontal">
 
 				<TextView
+					android:id="@+id/price_sort_btn_text"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_gravity="center_vertical"
 					android:layout_marginLeft="15dp"
 					android:layout_weight="1"
 					android:gravity="center_horizontal"
-					android:text="@string/price"
-					android:id="@+id/price_sort_btn_text"/>
+					android:text="@string/price"/>
 
 				<ImageView
+					android:id="@+id/price_sort_order_img"
 					android:layout_width="10dp"
 					android:layout_height="10dp"
 					android:layout_gravity="center_vertical"
 					android:layout_marginRight="15dp"
-					android:background="@mipmap/img_shopping_down"
-					android:id="@+id/price_sort_order_img"/>
+					android:background="@mipmap/img_shopping_down"/>
 
 			</LinearLayout>
 
 			<TextView
+				android:id="@+id/dividing_line_1"
 				android:layout_width="1dp"
 				android:layout_height="match_parent"
-				android:background="@color/main_color"
-				android:id="@+id/dividing_line_1"/>
+				android:background="@color/main_color"/>
 
 			<LinearLayout
+				android:id="@+id/screening_btn"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:layout_weight="1"
-				android:orientation="horizontal"
-				android:id="@+id/screening_btn">
+				android:orientation="horizontal">
 
 				<TextView
+					android:id="@+id/screening_condition_text"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_gravity="center_vertical"
 					android:layout_marginLeft="15dp"
 					android:layout_weight="1"
 					android:gravity="center_horizontal"
-					android:text="@string/screening_conditions"
-					android:id="@+id/screening_condition_text"/>
+					android:text="@string/screening_conditions"/>
 
 				<ImageView
+					android:id="@+id/drop_down_arrow"
 					android:layout_width="10dp"
 					android:layout_height="10dp"
 					android:layout_gravity="center_vertical"
 					android:layout_marginRight="15dp"
-					android:background="@mipmap/img_shopping_down"
-					android:id="@+id/drop_down_arrow"/>
+					android:background="@mipmap/img_shopping_down"/>
 
 			</LinearLayout>
 
@@ -148,7 +149,8 @@
 			android:layout_height="match_parent"
 			android:layout_weight="1"></ListView>
 
-		<include layout="@layout/include_main_button"
-				 android:id="@+id/bottom"/>
+		<include
+			android:id="@+id/bottom"
+			layout="@layout/include_main_button"/>
 	</LinearLayout>
 </FrameLayout>
