--- a/taixinkanghu/src/main/res/layout/fragment_select_date_new.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_date_new.xml
@@ -7,9 +7,9 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="93dp"
-		android:orientation="horizontal"
-		android:background="#00000000" android:alpha="0.5" android:id="@+id/header_background_ll"></LinearLayout>
+		android:layout_height="match_parent"
+		android:layout_weight="1"
+		android:background="@color/mask"/>
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -90,7 +90,7 @@
 			android:background="@drawable/bg_btn_white"
 			android:gravity="center"
 			android:text="确定"
-			android:textColor="@color/text_color_black"
+			android:textColor="@color/main_color"
 			android:textSize="14.0sp" />
 
 		<View
@@ -106,7 +106,7 @@
 			android:background="@drawable/bg_btn_white"
 			android:gravity="center"
 			android:text="取消"
-			android:textColor="@color/main_color"
+			android:textColor="@color/text_color_gray"
 			android:textSize="14.0sp" />
 	</LinearLayout>
 
@@ -131,10 +131,9 @@
 		android:background="@color/divider_color" />
 
 	<LinearLayout
-		android:id="@+id/bottom_background_ll"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="horizontal"
-		android:background="#70000000"
-		android:layout_weight="1" android:alpha="0.5"/>
+		android:layout_weight="1"
+		android:background="@color/mask"/>
+
 </LinearLayout>
