--- a/taixinkanghu/src/main/res/layout/activity_agreement.xml
+++ b/taixinkanghu/src/main/res/layout/activity_agreement.xml
@@ -1,47 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  android:orientation="vertical">
 
-    <include layout="@layout/include_header" />
+	<include layout="@layout/include_header"/>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+	<ScrollView
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1">
 
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_marginTop="20dp"
+			android:layout_weight="1"
+			android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical">
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginLeft="20dp"
+				android:layout_marginRight="20dp"
+				android:textSize="16sp"
+				android:text="@string/agreement_text"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="尊敬的用户：" />
+		</LinearLayout>
+	</ScrollView>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:text="        您即将通过本页面确认使用有北京泰心康护有限公司（以下简称“本公司”）研发的泰心康护系统为您提供优质的病患陪护预约服务。为了。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。" />
-
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/btn_sure"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_gravity="bottom"
-            android:background="@drawable/btn_main"
-            android:text="确定"
-            android:textColor="#ffffffff"
-            android:textSize="20.0sp" />
-
-    </FrameLayout>
+	<Button
+		android:id="@+id/btn_sure"
+		android:layout_width="match_parent"
+		android:layout_height="48dp"
+		android:layout_gravity="bottom"
+		android:background="@drawable/btn_main"
+		android:text="确定"
+		android:textColor="#ffffffff"
+		android:textSize="20.0sp"/>
 
 </LinearLayout>
