--- a/taixinkanghu/src/main/res/layout/fragment_select_date_new.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_date_new.xml
@@ -56,7 +56,7 @@
 
 		<com.taixinkanghu.widget.wheelview.WheelView
 			android:id="@+id/start_date_wheelview"
-			android:layout_width="70dp"
+			android:layout_width="match_parent"
 			android:layout_height="200dp"
 			android:layout_weight="1.0"/>
 
@@ -67,7 +67,7 @@
 
 		<com.taixinkanghu.widget.wheelview.WheelView
 			android:id="@+id/end_date_wheelview"
-			android:layout_width="70dp"
+			android:layout_width="match_parent"
 			android:layout_height="200dp"
 			android:layout_weight="1.0"/>
 
@@ -81,7 +81,7 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:background="#ffffffff"
+		android:background="@color/white"
 		android:orientation="horizontal">
 
 		<Button
@@ -108,28 +108,13 @@
 			android:background="@drawable/bg_btn_white"
 			android:gravity="center"
 			android:text="取消"
-			android:textColor="@color/text_color_gray"
+			android:textColor="@color/main_color"
 			android:textSize="14.0sp"/>
 	</LinearLayout>
 
 	<View
 		android:layout_width="match_parent"
-		android:layout_height="0.5dp"
-		android:background="@color/divider_color"/>
-
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:background="#ffffffff"
-		android:gravity="center"
-		android:padding="5dp"
-		android:text="注：开始时间的早上9：00到次日早上9：00为一天"
-		android:textColor="@color/text_color_gray"
-		android:textSize="13.0sp"/>
-
-	<View
-		android:layout_width="match_parent"
-		android:layout_height="0.5dp"
+		android:layout_height="1dp"
 		android:background="@color/divider_color"/>
 
 	<LinearLayout
