[modify] 01. 修改EditText控件弹出来小键盘的组合方式。

--- a/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
@@ -57,7 +57,7 @@
 					android:background="#00000000"
 					android:gravity="right"
 					android:hint="@string/name_hint_text"
-					android:imeOptions="actionNext"
+					android:imeOptions="actionDone"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
@@ -88,7 +88,7 @@
 					android:background="#00000000"
 					android:gravity="right"
 					android:hint="点击填写"
-					android:imeOptions="actionNext"
+					android:imeOptions="actionDone"
 					android:maxLength="11"
 					android:phoneNumber="true"
 					android:singleLine="true"
@@ -287,7 +287,7 @@
 					android:background="#00000000"
 					android:gravity="right"
 					android:hint="点击填写"
-					android:imeOptions="actionNext"
+					android:imeOptions="actionDone"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
 					android:textColorHint="@color/text_color_gray"
