[modify]修改预约陪护页面、护理员信息页面

--- a/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
@@ -22,14 +22,16 @@
 
 			<TextView
 				android:layout_width="match_parent"
-				android:layout_height="30dp"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:layout_marginTop="5dp"
+				android:layout_marginBottom="5dp"
 				android:layout_marginLeft="15dp"
 				android:layout_marginRight="15dp"
-				android:layout_gravity="center"
-				android:gravity="center_vertical"
+				android:gravity="center"
 				android:text="@string/apponintment_page_hint_text"
 				android:textColor="@color/main_color"
-				android:textSize="12sp"/>
+				android:textSize="14sp"/>
 
 			<LinearLayout
 				android:id="@+id/name_region"
@@ -122,6 +124,7 @@
 					android:layout_weight="1"
 					android:background="#00000000"
 					android:gravity="right"
+					android:hint="点击选择"
 					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
@@ -160,6 +163,7 @@
 					android:layout_weight="1"
 					android:background="#00000000"
 					android:gravity="right"
+					android:hint="点击选择"
 					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
@@ -198,6 +202,7 @@
 					android:layout_weight="1"
 					android:background="#00000000"
 					android:gravity="right"
+					android:hint="点击选择"
 					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
@@ -243,6 +248,7 @@
 					android:layout_weight="1"
 					android:background="#00000000"
 					android:gravity="right"
+					android:hint="点击选择"
 					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
@@ -390,6 +396,7 @@
 					android:layout_weight="1"
 					android:background="#00000000"
 					android:gravity="right"
+					android:hint="点击选择"
 					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
@@ -435,7 +442,7 @@
 					android:layout_weight="1"
 					android:background="#00000000"
 					android:gravity="right"
-					android:hint="08月14日 - 08月15日 共1天"
+					android:hint="点击选择"
 					android:imeOptions="actionNext"
 					android:singleLine="true"
 					android:textColor="@android:color/black"
