--- a/taixinkanghu/src/main/res/layout/activity_nurse_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurse_info.xml
@@ -245,7 +245,8 @@
 							android:layout_width="match_parent"
 							android:layout_height="wrap_content"
 							android:layout_marginLeft="15dp"
-							android:layout_marginRight="15dp">
+							android:layout_marginRight="15dp"
+							android:visibility="gone">
 
 							<include
 								layout="@layout/item_dividing_line_horizontal_fine"/>
@@ -284,7 +285,8 @@
 							android:background="@color/white"
 							android:gravity="center_vertical"
 							android:paddingBottom="5dp"
-							android:paddingTop="5dp">
+							android:paddingTop="5dp"
+							android:visibility="gone">
 
 							<ImageView
 								android:layout_width="20dp"
