[modify] 01. 修改EditText控件,进入预约陪护界面后，不自动跳转焦点。

--- a/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
@@ -37,7 +37,11 @@
 				android:layout_height="40dp"
 				android:background="@drawable/bg_bule_frame_top"
 				android:gravity="center_vertical"
-				android:orientation="horizontal">
+
+				android:focusable="true"
+				android:focusableInTouchMode="true"
+
+				android:orientation="horizontal" android:clickable="true">
 
 				<TextView
 					android:id="@+id/name_text"
